--- a/build.gradle
+++ b/build.gradle
@@ -25,4 +25,8 @@ dependencies {
     // https://mvnrepository.com/artifact/org.json/json
     compile group: 'org.json', name: 'json', version: '20160810'
 
+    compile 'com.google.code.gson:gson:2.6.2'
+
+    compile group: 'org.eclipse.jetty', name: 'jetty-http-spi', version: '9.4.4.v20170414'
+
 }
